data/derived/sp14/progs/unify/prog3527.ml.out
Characters 121-136:
  List.split (List.combine (let (one,two) = a in (x::one,y::two)))
                                                 ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
